--- a/print/print.html
+++ b/print/print.html
@@ -54,7 +54,7 @@
                 </span>
                 KoKeRu</span>
             <nav class="mdl-navigation">
-                <a class="mdl-navigation__link" href="/">Dashboard</a>
+                <a class="mdl-navigation__link" href="../">Dashboard</a>
                 <a class="mdl-navigation__link" href="">Print</a>
                 <!-- account button di screen besar pindah ke navbar-->
                 <div class="margin-x mdl-layout--small-screen-only">
@@ -76,7 +76,7 @@
                 </section>
                 <section id="content-body">
                     <div class="mdl-grid">
-                        <div class="mdl-cell">
+                        <div class="mdl-cell mdl-cell--2-col text-center">
                             <form action="" name="print">
                                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                                     <input type="date" name="tanggal" id="tanggal" class="mdl-textfield__input"
@@ -85,75 +85,39 @@
                                 </div>
                                 <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label margin-bottom">
                                     <select name="pilihanStatus" id="pilihanStatus" class="mdl-textfield__input">
-                                        <option selected disabled value=""></option>
-                                        <option>SEMUA</option>
+                                        <!-- <option selected disabled value=""></option> -->
+                                        <option selected>SEMUA</option>
                                         <option>BELUM</option>
                                         <option>SUDAH</option>
                                     </select>
                                     <label for="pilihanStatus" class="mdl-textfield__label">Pilih Status</label>
                                 </div>
                             </form>
-                            <div>
-                                <button onclick="fireModal()"
-                                    class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
-                                    Tampil</button>
+                            <button
+                                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored">
+                                Tampil</button>
+                            <button onclick="printNewTab()"
+                                class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                                Print</button>
+                        </div>
+                        <div class="mdl-cell mdl-cell--10-col mdl-shadow--2dp text-center">
+                            <div class="mdl-grid">
+                                <div id="laporanHarian"></div>
                             </div>
                         </div>
-                </section>
-                <section id="popup">
-
-                    <dialog class="mdl-dialog" id="dialog-1">
-                        <h4 class="mdl-dialog__title">Laporan Harian Kebersihan dan Kerapihan Ruangan Gedung Bersama
-                            Maju</h4>
-                        <div class="mdl-dialog__content">
-                            <p>Kamis Tanggal 10 Nopember 2020</p>
-                            <p>Tanggal Cetak 12 Nopember 2020 Jam 10:10 WIB</p>
-                            <table class="mdl-data-table mdl-js-data-table">
-                                <thead>
-                                    <tr>
-                                        <th>No</th>
-                                        <th>Ruang</th>
-                                        <th>Nama CS</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tbody>
-                                    <tr>
-                                        <td>1</td>
-                                        <td>R.123</td>
-                                        <td>Doni Kusumah</td>
-                                        <td>SUDAH</td>
-                                    </tr>
-                                    <tr>
-                                        <td>2</td>
-                                        <td>R.124</td>
-                                        <td>Doni Kusumah</td>
-                                        <td>SUDAH</td>
-                                    </tr>
-                                    <tr>
-                                        <td>3</td>
-                                        <td>R.125</td>
-                                        <td>Doni Kusumah</td>
-                                        <td>BELUM</td>
-                                    </tr>
-                                </tbody>
-                            </table>
-                        </div>
-                        <div class="mdl-dialog__actions">
-                            <button type="button" class="mdl-button close">Close</button>
-                        </div>
-                    </dialog>
+                    </div>
                 </section>
             </div>
         </main>
     </div>
 
-
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <!-- mdl -->
     <script defer src=" https://code.getmdl.io/1.3.0/material.min.js"></script>
     <!-- mdl plus plus -->
     <!-- local -->
-    <script src="../js/script.js"></script>
+    <script src="../js/print.js"></script>
 </body>
 
 </html>
