menambahkan link untuk ganti akun (dev only)

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <!-- list menu saat tombol di click -->
                         <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="account">
                             <!-- menu yang hanya digunakan pada fase development -->
-                            <li class="mdl-menu__item">Ganti Akun (dev)</li>
+                            <li class="mdl-menu__item"><a href="manager/">Ganti Akun (dev only)</a></li>
                         </ul>
                     </div>
                 </nav>
@@ -66,16 +66,16 @@
                 <a class="mdl-navigation__link" href="">Dashboard</a>
                 <a class="mdl-navigation__link" href="print/print.html">Print</a>
                 <!-- account button di screen besar pindah ke navbar-->
-                <div class="pls-margin-x mdl-layout--small-screen-only">
+                <div class="pls-margin-x pls-magin-y mdl-layout--small-screen-only">
                     <button id="account-side"
-                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+                        class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent pls-magin-y">
                         <span class="material-icons">account_circle</span>
                         <span class="account-name">Doni Hermawan</span>
                     </button>
                     <!-- list menu saat tombol di click -->
                     <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="account-side">
                         <!-- menu yang hanya digunakan pada fase development -->
-                        <li class="mdl-menu__item">Ganti Akun (dev)</li>
+                        <li class="mdl-menu__item"><a href="manager/">Ganti Akun (dev only)</a></li>
                     </ul>
                 </div>
             </nav>
