--- a/print/print.html
+++ b/print/print.html
@@ -45,7 +45,7 @@
                         <!-- list menu saat tombol di click -->
                         <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="account">
                             <!-- menu yang hanya digunakan pada fase development -->
-                            <li class="mdl-menu__item">Ganti Akun (dev)</li>
+                            <li class="mdl-menu__item">Ganti Akun (dev only)</li>
                         </ul>
                     </div>
                 </nav>
@@ -64,7 +64,7 @@
                 <a class="mdl-navigation__link" href="../">Dashboard</a>
                 <a class="mdl-navigation__link" href="">Print</a>
                 <!-- account button di screen besar pindah ke navbar-->
-                <div class="pls-margin-x mdl-layout--small-screen-only">
+                <div class="pls-margin-x pls-magin-y mdl-layout--small-screen-only">
                     <button id="account-side"
                         class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
                         <span class="material-icons">account_circle</span>
@@ -73,7 +73,7 @@
                     <!-- list menu saat tombol di click -->
                     <ul class="mdl-menu mdl-menu--bottom-left mdl-js-menu mdl-js-ripple-effect" for="account-side">
                         <!-- menu yang hanya digunakan pada fase development -->
-                        <li class="mdl-menu__item">Ganti Akun (dev)</li>
+                        <li class="mdl-menu__item">Ganti Akun (dev only)</li>
                     </ul>
                 </div>
             </nav>
