Membuat default value dari tanggal pada print menjadi hari ini dan menambahkan favicon

--- a/ajax/printed.html
+++ b/ajax/printed.html
@@ -1,5 +1,13 @@
 <!-- 
     CSS dilakukan secara internal(di head) dan inline(hanya satu)
+    Berisi dokumen laporan harian yang disusun menggunakan tabel
+    Terinspirasi dari SIAP
+    
+    Masih belum tahu apakah ini bisa dikirimkan jika sudah bentuk dinamis PHP
+    Ini masuk ke limitasi dari ajaxnya jquery
+    Mungkin nanti harus direquest berkali-kali setiap ada pergantian
+
+    Kalau nanti masih belum bisa, cara berikutnya adalah copy semua isi body
  -->
 <!DOCTYPE html>
 <html lang="en">
